--- a/environment.yml
+++ b/environment.yml
@@ -6,15 +6,21 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=51_gnu
   - blas=1.0=openblas
+  - blinker=1.7.0=pyhd8ed1ab_0
   - bzip2=1.0.8=hfd63f10_2
   - c-ares=1.19.1=h998d150_0
   - ca-certificates=2023.11.17=hcefe29a_0
   - cairo=1.16.0=h537eab0_5
+  - certifi=2023.11.17=pyhd8ed1ab_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
   - cyrus-sasl=2.1.28=h647bc0d_1
+  - dash=2.14.2=pyhd8ed1ab_0
   - dbus=1.13.18=h821dc26_0
   - eigen=3.4.0=hd62202e_0
   - expat=2.5.0=h419075a_0
   - ffmpeg=4.2.2=hdfaaa67_0
+  - flask=3.0.1=pyhd8ed1ab_0
   - fontconfig=2.14.1=h652894d_2
   - freetype=2.12.1=h6df46f4_0
   - giflib=5.2.1=hb9de7d4_2
@@ -27,6 +33,10 @@ dependencies:
   - harfbuzz=4.3.0=hfddee83_1
   - hdf5=1.12.1=h2117f30_3
   - icu=68.2=h3621d8e_0
+  - idna=3.6=pyhd8ed1ab_0
+  - importlib-metadata=7.0.1=pyha770c72_0
+  - itsdangerous=2.1.2=pyhd8ed1ab_0
+  - jinja2=3.1.3=pyhd8ed1ab_0
   - jpeg=9e=h9cdd2b7_1
   - krb5=1.20.1=h2e2fba8_1
   - lame=3.100=hf897c2e_1001
@@ -68,29 +78,49 @@ dependencies:
   - lz4-c=1.9.4=h419075a_0
   - mysql=5.7.24=h3140d82_2
   - ncurses=6.4=h419075a_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - nettle=3.7.3=h82288b7_1
   - numpy-base=1.24.3=py311hb6890e9_0
   - opencv=4.6.0=py311h6432667_5
   - openh264=1.8.0=h22f4aa5_0
   - openjpeg=2.4.0=hf3eb033_0
   - openssl=3.0.12=h2f4d8fa_0
+  - packaging=23.2=pyhd8ed1ab_0
   - pcre=8.45=h01db608_0
   - pixman=0.40.0=h2f4d8fa_1
+  - plotly=5.18.0=pyhd8ed1ab_0
   - python=3.11.4=h4bb2201_0
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-tzdata=2023.4=pyhd8ed1ab_0
+  - pytz=2023.3.post1=pyhd8ed1ab_0
   - qt-main=5.15.2=hf18d10e_9
   - qt-webengine=5.15.9=hb462a96_6
   - qtwebkit=5.212=ha4719be_5
   - readline=8.2=h998d150_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - retrying=1.3.3=py_2
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.41.2=h998d150_0
+  - tenacity=8.2.3=pyhd8ed1ab_0
   - tk=8.6.12=h241ca14_0
+  - typing-extensions=4.9.0=hd8ed1ab_0
+  - typing_extensions=4.9.0=pyha770c72_0
   - tzdata=2023d=h04d1e81_0
+  - werkzeug=3.0.1=pyhd8ed1ab_0
   - x264=1!152.20180806=h2f4d8fa_0
   - xz=5.4.5=h998d150_0
+  - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h998d150_0
   - zstd=1.5.5=h6a09583_0
   - pip:
+    - ansi2html==1.9.1
+    - bottleneck==1.3.5
+    - markupsafe==2.1.3
+    - numexpr==2.8.7
     - numpy==1.24.3
+    - pandas==2.1.4
     - pip==23.3.1
     - setuptools==68.2.2
+    - urllib3==2.1.0
     - wheel==0.41.2
 prefix: /home/robert/miniconda3/envs/my-raspberry
